--- a/Presentation/Nop.Web/App_Data/Localization/Installation/installation.cz.xml
+++ b/Presentation/Nop.Web/App_Data/Localization/Installation/installation.cz.xml
@@ -68,10 +68,10 @@
     <Value>Vyberte poskytovatele dat (data provider)</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation1">
-    <Value>Potřebujete-li informace o tom, jak používat nopCommerce (v angličtině), navštivte</Value>
+    <Value>Potřebujete-li informace o tom, jak používat nopFramework (v angličtině), navštivte</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation2">
-    <Value>sekci documentation na nopCommerce.com</Value>
+    <Value>sekci documentation na https://github.com/alirezakhosravi/NopFramework</Value>
   </LocaleResource>
   <LocaleResource Name="Example">
     <Value>Příklad</Value>
@@ -80,7 +80,7 @@
     <Value>Instalace</Value>
   </LocaleResource>
   <LocaleResource Name="Installing">
-    <Value>Instaluji nopCommerce...</Value>
+    <Value>Instaluji nopFramework...</Value>
   </LocaleResource>
   <LocaleResource Name="PasswordsDoNotMatch">
     <Value>Hesla se neshodují</Value>
@@ -128,13 +128,13 @@
     <Value>Užít databázi SQL Serveru (nebo SQL Express)</Value>
   </LocaleResource>
   <LocaleResource Name="StoreInformation">
-    <Value>Informaced o obchodu</Value>
+    <Value>Informaced</Value>
   </LocaleResource>
   <LocaleResource Name="Title">
-    <Value>Instalace nopCommerce</Value>
+    <Value>Instalace nopFramework</Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip1">
-    <Value>nopCommerce je významné řešení pro on-line elektronické obchodování postavené na platformě ASP.NET. Tento průvodce Vás provede instalačí a konfigurací nopCommerce</Value>
+    <Value>nopFramework je významné řešení pro on-line elektronické obchodování postavené na platformě ASP.NET. Tento průvodce Vás provede instalačí a konfigurací nopFramework</Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip2">
     <Value>Abyste úspěšně dokončili instalaci a nastavení musíte mít k dispozici informace o databázovém serveru a databázi (připojovací řetězec - "connection string"). Pokud budete potřebovat, zeptejte se Vašeho poskytovatele internetových služeb (ISP) Pokud instalujete na místní počítač nebo server, pravděpodobně získáte požaované informace u vašeho systémového administrátora.</Value>
