--- a/Presentation/Nop.Web/App_Data/Localization/Installation/installation.gr.xml
+++ b/Presentation/Nop.Web/App_Data/Localization/Installation/installation.gr.xml
@@ -66,10 +66,10 @@
     <Value>Επιλέξτε τα πάροχο δεδομένων</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation1">
-    <Value>Αν χρειάζεστε πληροφορίες για το πώς να χρησιμοποιήσετε τη nopCommerce, επισκεφθείτε</Value>
+    <Value>Αν χρειάζεστε πληροφορίες για το πώς να χρησιμοποιήσετε τη nopFramework, επισκεφθείτε</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation2">
-    <Value>το τμήμα τεκμηρίωσης στο nopCommerce.com</Value>
+    <Value>το τμήμα τεκμηρίωσης στο https://github.com/alirezakhosravi/NopFramework</Value>
   </LocaleResource>
   <LocaleResource Name="Example">
     <Value>Παράδειγμα</Value>
@@ -78,7 +78,7 @@
     <Value>Εγκατάσταση</Value>
   </LocaleResource>
   <LocaleResource Name="Installing">
-    <Value>Εγκατάσταση nopCommerce ...</Value>
+    <Value>Εγκατάσταση nopFramework ...</Value>
   </LocaleResource>
   <LocaleResource Name="PasswordsDoNotMatch">
     <Value>Οι κωδικοί πρόσβασης δεν ταιριάζουν</Value>
@@ -126,13 +126,13 @@
     <Value>Χρήση του SQL Server (ή SQL Express) ως βάση δεδομένων</Value>
   </LocaleResource>
   <LocaleResource Name="StoreInformation">
-    <Value>Πληροφορίες καταστηματός</Value>
+    <Value>Πληροφορίες</Value>
   </LocaleResource>
   <LocaleResource Name="Title">
-    <Value>nopCommerce εγκατάσταση</Value>
+    <Value>nopFramework εγκατάσταση</Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip1">
-    <Value>Η nopCommerce είναι η κορυφαία ASP.NET λύση για online κατάστημα ηλεκτρονικού εμπορίου. Αυτός ο οδηγός θα σας καθοδηγήσει στη διαδικασία εγκατάστασης της nopCommerce</Value>
+    <Value>Η nopFramework είναι η κορυφαία ASP.NET λύση για online κατάστημα ηλεκτρονικού εμπορίου. Αυτός ο οδηγός θα σας καθοδηγήσει στη διαδικασία εγκατάστασης της nopFramework</Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip2">
     <Value>Για την ολοκλήρωση αυτού του οδηγού θα πρέπει να γνωρίζουμε κάποιες πληροφορίες σχετικά με server της βάσης δεδομένων σας ("συμβολοσειρά σύνδεσης"). Παρακαλούμε επικοινωνήστε με τον ISP σας, εάν είναι απαραίτητο. Εάν θέλετε να εγκαταστήσετε σε έναν τοπικό υπολογιστή ή διακομιστή μπορεί να χρειαστείτε πληροφορίες από διαχειριστή του συστήματός σας.</Value>
