--- a/Presentation/Nop.Web/App_Data/Localization/Installation/installation.ar.xml
+++ b/Presentation/Nop.Web/App_Data/Localization/Installation/installation.ar.xml
@@ -66,10 +66,10 @@
     <Value>اختر مزود المعلومات</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation1">
-    <Value>إذا كنت تحتاج دليل استخدام موقع nopCommerce, قم بزيارة</Value>
+    <Value>إذا كنت تحتاج دليل استخدام موقع nopFramework, قم بزيارة</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation2">
-    <Value>قيم بزيارة قسم التوثيق على nopCommerce.com </Value>
+    <Value>قيم بزيارة قسم التوثيق على https://github.com/alirezakhosravi/NopFramework </Value>
   </LocaleResource>
   <LocaleResource Name="Example">
     <Value>مثلاُ</Value>
@@ -78,7 +78,7 @@
     <Value>تثبيت</Value>
   </LocaleResource>
   <LocaleResource Name="Installing">
-    <Value>جاري تثبيت nopCommerce...</Value>
+    <Value>جاري تثبيت nopFramework...</Value>
   </LocaleResource>
   <LocaleResource Name="PasswordsDoNotMatch">
     <Value>كلمات المرور غير متطابقة</Value>
@@ -126,13 +126,13 @@
     <Value>استخدم قاعدة بيانات SQL (أو SQL Express)</Value>
   </LocaleResource>
   <LocaleResource Name="StoreInformation">
-    <Value>معلومات المتجر</Value>
+    <Value>معلومات</Value>
   </LocaleResource>
   <LocaleResource Name="Title">
-    <Value>nopCommerce تنصيب</Value>
+    <Value>nopFramework تنصيب</Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip1">
-    <Value>nopCommerce هو مشروع متجر للتسوق عبر الانترنت. هذه الخطوات سوف تساعدك لتنصيب وتثبيت متجر nopCommerce.</Value>
+    <Value>nopFramework هو مشروع site للتسوق عبر الانترنت. هذه الخطوات سوف تساعدك لتنصيب وتثبيت site nopFramework.</Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip2">
     <Value>لمتابعة خطوات التثبيت يجب ان تعرف المعلومات التالية حول قاعدة البيانات وخادم SQL مثل سلسلة الاتصال (Conncetion String). الرجاء الاتصال بمزود الخدمة إذا دعت الحاجة لذلك. إذا كنت تريد ان تقوم بتثبيت على جهازك (خادم محلي)، قد تحتاج إلى المعلومات من مدير الخادم لديك (Admin)</Value>
