--- a/Presentation/Nop.Web/App_Data/Localization/Installation/installation.bn-bd.xml
+++ b/Presentation/Nop.Web/App_Data/Localization/Installation/installation.bn-bd.xml
@@ -66,10 +66,10 @@
     <Value>ডাটা প্রোভাইডার উল্লেখ করুন</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation1">
-    <Value>nopCommerce কিভাবে ব্যাবহার করতে হয় তা জানতে ভিজিট করুন</Value>
+    <Value>nopFramework কিভাবে ব্যাবহার করতে হয় তা জানতে ভিজিট করুন</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation2">
-    <Value>nopCommerce.com এ ডকুমেন্টেশন অংশ</Value>
+    <Value>https://github.com/alirezakhosravi/NopFramework এ ডকুমেন্টেশন অংশ</Value>
   </LocaleResource>
   <LocaleResource Name="Example">
     <Value>উদাহরণ</Value>
@@ -78,7 +78,7 @@
     <Value>ইনস্টল করুন</Value>
   </LocaleResource>
   <LocaleResource Name="Installing">
-    <Value>nopCommerce ইনস্টল করা হচ্ছে...</Value>
+    <Value>nopFramework ইনস্টল করা হচ্ছে...</Value>
   </LocaleResource>
   <LocaleResource Name="PasswordsDoNotMatch">
     <Value>পাসওয়ার্ড মিলছে না</Value>
@@ -126,13 +126,13 @@
     <Value>SQL সার্ভার (অথবা SQL এক্সপ্রেস) ডাটাবেস ব্যবহার করুন</Value>
   </LocaleResource>
   <LocaleResource Name="StoreInformation">
-    <Value>দোকানের তথ্য</Value>
+    <Value>নের তথ্য</Value>
   </LocaleResource>
   <LocaleResource Name="Title">
-    <Value>nopCommerce ইনস্টলেশন</Value>
+    <Value>nopFramework ইনস্টলেশন</Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip1">
-    <Value>nopCommerce একটি শীর্ষস্থানীয় ASP.NET অনলাইন দোকানগুলোর ই-কমার্স সমাধান। nopCommerce কনফিগার করার সম্পূর্ণ প্রক্রিয়াতে এই উইজার্ডটি আপনাকে সাহায্য করবে </Value>
+    <Value>nopFramework একটি শীর্ষস্থানীয় ASP.NET অনলাইন দোকানগুলোর ই-কমার্স সমাধান। nopFramework কনফিগার করার সম্পূর্ণ প্রক্রিয়াতে এই উইজার্ডটি আপনাকে সাহায্য করবে </Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip2">
     <Value>এই উইজার্ডটি সম্পূর্ণ করতে আপনার ডাটাবেস সার্ভার সংক্রান্ত কিছু তথ্য ("কানেকশন স্ট্রিং") আপনাকে জানতে হবে। প্রয়োজন হলে আপনার ISP-র সাথে যোগাযোগ করুন। যদি আপনি এটি আপনার লোকাল ম্যাশিন অথবা সার্ভারে ইন্সটল করেন তাহলে আপনার সিস্টেম অ্যাডমিন থেকে কিছু তথ্য প্রয়োজন হতে পারে।</Value>
