--- a/Presentation/Nop.Web/App_Data/Localization/Installation/installation.da.xml
+++ b/Presentation/Nop.Web/App_Data/Localization/Installation/installation.da.xml
@@ -66,10 +66,10 @@
     <Value>Vælg data udbyder</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation1">
-    <Value>Har du brug for information om hvordan du bruger nopCommerce, så besøg</Value>
+    <Value>Har du brug for information om hvordan du bruger nopFramework, så besøg</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation2">
-    <Value>dokumentations sektionen på nopCommerce.com</Value>
+    <Value>dokumentations sektionen på https://github.com/alirezakhosravi/NopFramework</Value>
   </LocaleResource>
   <LocaleResource Name="Example">
     <Value>Eksempel</Value>
@@ -78,7 +78,7 @@
     <Value>Installér</Value>
   </LocaleResource>
   <LocaleResource Name="Installing">
-    <Value>Installerer nopCommerce...</Value>
+    <Value>Installerer nopFramework...</Value>
   </LocaleResource>
   <LocaleResource Name="PasswordsDoNotMatch">
     <Value>Passwords er ikke ens</Value>
@@ -126,13 +126,13 @@
     <Value>Brug SQL Server (eller SQL Express) database</Value>
   </LocaleResource>
   <LocaleResource Name="StoreInformation">
-    <Value>Butiks-information</Value>
+    <Value>information</Value>
   </LocaleResource>
   <LocaleResource Name="Title">
-    <Value>nopCommerce installation</Value>
+    <Value>nopFramework installation</Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip1">
-    <Value>nopCommerce er den førende ASP.NET online shop e-commerce løsning. Denne wizard vil guide dig gennem processen for konfigurering af nopCommerce</Value>
+    <Value>nopFramework er den førende ASP.NET online shop e-commerce løsning. Denne wizard vil guide dig gennem processen for konfigurering af nopFramework</Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip2">
     <Value>For at fuldføre denne wizard skal du vide nogle informationer om din database server ("connection string"). Venligst kontakt din webudbyder herom såfremt nødvendigt. Installerer du på en lokal maskine eller server behøver du måske information fra din System Administrator.</Value>
