--- a/Presentation/Nop.Web/App_Data/Localization/Installation/installation.hu.xml
+++ b/Presentation/Nop.Web/App_Data/Localization/Installation/installation.hu.xml
@@ -66,10 +66,10 @@
     <Value>Válassza az adatszolgáltatót</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation1">
-    <Value>Ha információra van szüksége, hogyan kell használni nopCommerce-t, látogasson el a</Value>
+    <Value>Ha információra van szüksége, hogyan kell használni nopFramework-t, látogasson el a</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation2">
-    <Value>A dokumentáció szakasz nopCommerce.com-on</Value>
+    <Value>A dokumentáció szakasz https://github.com/alirezakhosravi/NopFramework</Value>
   </LocaleResource>
   <LocaleResource Name="Example">
     <Value>Példa</Value>
@@ -78,7 +78,7 @@
     <Value>Telepítse</Value>
   </LocaleResource>
   <LocaleResource Name="Installing">
-    <Value>nopCommerce telepítése ...</Value>
+    <Value>nopFramework telepítése ...</Value>
   </LocaleResource>
   <LocaleResource Name="PasswordsDoNotMatch">
     <Value>A jelszavak nem egyeznek</Value>
@@ -126,13 +126,13 @@
     <Value>Használja az SQL Server (vagy SQL Express) adatbázist</Value>
   </LocaleResource>
   <LocaleResource Name="StoreInformation">
-    <Value>Áruház információk</Value>
+    <Value>információk</Value>
   </LocaleResource>
   <LocaleResource Name="Title">
-    <Value>nopCommerce telepítés</Value>
+    <Value>nopFramework telepítés</Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip1">
-    <Value> A nopCommerce vezető ASP.NET online bolt, elektronikus kereskedelmi megoldás. Ez a varázsló végigvezeti a  nopCommerce konfigurálása  folyamatában</Value>
+    <Value> A nopFramework vezető ASP.NET online bolt, elektronikus kereskedelmi megoldás. Ez a varázsló végigvezeti a  nopFramework konfigurálása  folyamatában</Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip2">
     <Value> A varázsló befejezéséhez, tudnia kell néhány információt az adatbázis szerver ("kapcsolat string"). Kérjük, lépjen kapcsolatba az internetszolgáltatóval, ha szükséges. Ha a telepítés helyi gépen vagy a szerveren, akkor szüksége lehet információkra a Rendszer Admin-tol.</Value>
