--- a/Presentation/Nop.Web/App_Data/Localization/Installation/installation.it.xml
+++ b/Presentation/Nop.Web/App_Data/Localization/Installation/installation.it.xml
@@ -66,10 +66,10 @@
     <Value>Seleziona il fornitore di dati</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation1">
-    <Value>Se avete bisogno di informazioni su come utilizzare nopCommerce, visitare</Value>
+    <Value>Se avete bisogno di informazioni su come utilizzare nopFramework, visitare</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation2">
-    <Value>la sezione documentazione su nopCommerce.com</Value>
+    <Value>la sezione documentazione su https://github.com/alirezakhosravi/NopFramework</Value>
   </LocaleResource>
   <LocaleResource Name="Example">
     <Value>Esempio</Value>
@@ -78,7 +78,7 @@
     <Value>Installa</Value>
   </LocaleResource>
   <LocaleResource Name="Installing">
-    <Value>Installazione di nopCommerce...</Value>
+    <Value>Installazione di nopFramework...</Value>
   </LocaleResource>
   <LocaleResource Name="PasswordsDoNotMatch">
     <Value>Le password non corrispondono</Value>
@@ -126,13 +126,13 @@
     <Value>Usa il database SQL Server (o SQL Express)</Value>
   </LocaleResource>
   <LocaleResource Name="StoreInformation">
-    <Value>Informazioni Negozio</Value>
+    <Value>Informazioni</Value>
   </LocaleResource>
   <LocaleResource Name="Title">
-    <Value>Installazione di nopCommerce</Value>
+    <Value>Installazione di nopFramework</Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip1">
-    <Value>nopCommerce è la principale soluzione in ASP.NET per un negozio online di e-commerce. Questa procedura guidata vi guiderà attraverso il processo di configurazione di nopCommerce</Value>
+    <Value>nopFramework è la principale soluzione in ASP.NET per un negozio online di e-commerce. Questa procedura guidata vi guiderà attraverso il processo di configurazione di nopFramework</Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip2">
     <Value>Per completare questa procedura guidata è necessario conoscere alcune informazioni riguardanti il server di database ("stringa di connessione"). Si prega di contattare il proprio ISP, se necessario. Se si sta installando su una macchina locale o su server potrebbero essere necessarie informazioni dal proprio amministratore di sistema.</Value>
