--- a/Presentation/Nop.Web/App_Data/Localization/Installation/installation.jp.xml
+++ b/Presentation/Nop.Web/App_Data/Localization/Installation/installation.jp.xml
@@ -66,10 +66,10 @@
     <Value>データプロバイダの選択</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation1">
-    <Value>nopCommerceの利用方法に関する情報については、</Value>
+    <Value>nopFrameworkの利用方法に関する情報については、</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation2">
-    <Value>nopCommerce.comサイトにおけるドキュメンテーション・セクションを参照</Value>
+    <Value>https://github.com/alirezakhosravi/NopFramework サイトにおけるドキュメンテーション・セクションを参照</Value>
   </LocaleResource>
   <LocaleResource Name="Example">
     <Value>例</Value>
@@ -78,7 +78,7 @@
     <Value>インストール</Value>
   </LocaleResource>
   <LocaleResource Name="Installing">
-    <Value>nopCommerceをインストール中...</Value>
+    <Value>nopFrameworkをインストール中...</Value>
   </LocaleResource>
   <LocaleResource Name="PasswordsDoNotMatch">
     <Value>パスワードが違います</Value>
@@ -126,13 +126,13 @@
     <Value>SQLServer (又はSQL Express)データベースを使用</Value>
   </LocaleResource>
   <LocaleResource Name="StoreInformation">
-    <Value>ストア情報</Value>
+    <Value>情報</Value>
   </LocaleResource>
   <LocaleResource Name="Title">
-    <Value>nopCommerceのインストール</Value>
+    <Value>nopFrameworkのインストール</Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip1">
-    <Value>nopCommerceはASP.NETをベースとするリーディングeCommerceソリューションです。このウィザードにより、nopCommerceの設定を行っていってください。</Value>
+    <Value>nopFrameworkはASP.NETをベースとするリーディングeCommerceソリューションです。このウィザードにより、nopFrameworkの設定を行っていってください。</Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip2">
     <Value>このウィザードを完了するためには、データベースに関する情報(接続文字列)などを取得しておく必要があります。必要に応じて、ご契約先のISPに確認をしてください。ローカルのマシン又はサーバにインストールする場合には、システム管理者から情報を得る必要があるかもしれません。</Value>
