--- a/Presentation/Nop.Web/App_Data/Localization/Installation/installation.sk.xml
+++ b/Presentation/Nop.Web/App_Data/Localization/Installation/installation.sk.xml
@@ -68,10 +68,10 @@
     <Value>Vyberte poskytovateľa dát (data provider)</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation1">
-    <Value>Ak potrebujete informácie o tom, ako používať nopCommerce (v angličtine), navštívte</Value>
+    <Value>Ak potrebujete informácie o tom, ako používať nopFramework (v angličtine), navštívte</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation2">
-    <Value>sekciu documentation na nopCommerce.com</Value>
+    <Value>sekciu documentation na https://github.com/alirezakhosravi/NopFramework</Value>
   </LocaleResource>
   <LocaleResource Name="Example">
     <Value>Príklad</Value>
@@ -80,7 +80,7 @@
     <Value>Inštalácia</Value>
   </LocaleResource>
   <LocaleResource Name="Installing">
-    <Value>Inštalujem nopCommerce...</Value>
+    <Value>Inštalujem nopFramework...</Value>
   </LocaleResource>
   <LocaleResource Name="PasswordsDoNotMatch">
     <Value>Heslá niesú zhodné</Value>
@@ -128,13 +128,13 @@
     <Value>Použiť databázu SQL Server (alebo SQL Express)</Value>
   </LocaleResource>
   <LocaleResource Name="StoreInformation">
-    <Value>Informácie o obchode</Value>
+    <Value>Informácie</Value>
   </LocaleResource>
   <LocaleResource Name="Title">
-    <Value>Inštalácia nopCommerce</Value>
+    <Value>Inštalácia nopFramework</Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip1">
-    <Value>nopCommerce je významné riešenie pre on-line elektronické obchodovanie postavené na platforme ASP.NET. Tento sprievodca Vás provedie inštaláciou a konfiguráciou nopCommerce</Value>
+    <Value>nopFramework je významné riešenie pre on-line elektronické obchodovanie postavené na platforme ASP.NET. Tento sprievodca Vás provedie inštaláciou a konfiguráciou nopFramework</Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip2">
     <Value>K úspešnému dokončeniu inštalácie a nastaveniu musíte mať k dispozicii informácie o databázovom serveri a databázy (databázové spojenie - "connection string"). Ak ich budete potrebovať, spýtajte sa Vášho poskytovateľa internetových služeb (ISP). Ak inštalujete na miestny počítač alebo server, pravdepodobne získate požadované informacie od vašeho systémového administrátora.</Value>
