--- a/Presentation/Nop.Web/App_Data/Localization/Installation/installation.sv.xml
+++ b/Presentation/Nop.Web/App_Data/Localization/Installation/installation.sv.xml
@@ -67,10 +67,10 @@
     <Value>Välj data provider</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation1">
-    <Value>Om du behöver information om hur du använder nopCommerce, besök</Value>
+    <Value>Om du behöver information om hur du använder nopFramework, besök</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation2">
-    <Value>dokumentationsavdelningen på nopCommerce.com</Value>
+    <Value>dokumentationsavdelningen på https://github.com/alirezakhosravi/NopFramework</Value>
   </LocaleResource>
   <LocaleResource Name="Example">
     <Value>Exempel</Value>
@@ -79,7 +79,7 @@
     <Value>Installera</Value>
   </LocaleResource>
   <LocaleResource Name="Installing">
-    <Value>Installerar nopCommerce...</Value>
+    <Value>Installerar nopFramework...</Value>
   </LocaleResource>
   <LocaleResource Name="PasswordsDoNotMatch">
     <Value>Lösenorden matchar inte</Value>
@@ -127,13 +127,13 @@
     <Value>Använd SQL Server (eller SQL Express) databas</Value>
   </LocaleResource>
   <LocaleResource Name="StoreInformation">
-    <Value>Butiksinformation</Value>
+    <Value>information</Value>
   </LocaleResource>
   <LocaleResource Name="Title">
-    <Value>nopCommerce installation</Value>
+    <Value>nopFramework installation</Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip1">
-    <Value>nopCommerce är den ledande ASP.NET-lösningen för onlinebutik och e-handel. Den här guiden hjälper dig igenom processen att konfigurera nopCommerce</Value>
+    <Value>nopFramework är den ledande ASP.NET-lösningen för onlinebutik och e-handel. Den här guiden hjälper dig igenom processen att konfigurera nopFramework</Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip2">
     <Value>För att genomföra den här guiden behöver du känna till en del information om din databasserver ("anslutningssträng"). Vänligen kontakta din internetleverantör vid behov. Om du installerar på en lokal maskin eller server, kanske du behöver kontakta din systemadministratör.</Value>
