--- a/Presentation/Nop.Web/App_Data/Localization/Installation/installation.vi.xml
+++ b/Presentation/Nop.Web/App_Data/Localization/Installation/installation.vi.xml
@@ -66,10 +66,10 @@
     <Value>Chọn bộ cấp dữ liệu</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation1">
-    <Value>Nếu bạn muốn tìm hiểu thêm về cách sử dụng nopCommerce, hãy ghé thăm</Value>
+    <Value>Nếu bạn muốn tìm hiểu thêm về cách sử dụng nopFramework, hãy ghé thăm</Value>
   </LocaleResource>
   <LocaleResource Name="Documentation2">
-    <Value>mục tài liệu trên trang nopCommerce.com</Value>
+    <Value>mục tài liệu trên trang https://github.com/alirezakhosravi/NopFramework</Value>
   </LocaleResource>
   <LocaleResource Name="Example">
     <Value>Ví dụ</Value>
@@ -126,13 +126,13 @@
     <Value>Sử dụng cơ sở dữ liệu SQL Server (hoặc SQL Express)</Value>
   </LocaleResource>
   <LocaleResource Name="WebsiteInformation">
-    <Value>Thông tin website</Value>
+    <Value>Thông</Value>
   </LocaleResource>
   <LocaleResource Name="Title">
     <Value>Cài đặt website</Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip1">
-    <Value>nopCommerce là giải pháp thương mại điện tử hàng đầu cho cửa hàng trực tuyến bằng ASP.NET. Trình cài đặt này sẽ hướng dẫn bạn từng bước cấu hình nopCommerce</Value>
+    <Value>nopFramework là giải pháp thương mại điện tử hàng đầu cho cửa hàng trực tuyến bằng ASP.NET. Trình cài đặt này sẽ hướng dẫn bạn từng bước cấu hình nopFramework</Value>
   </LocaleResource>
   <LocaleResource Name="Tooltip2">
     <Value>Để hoàn thành cài đặt, bạn phải cung cấp một số thông tin liên quan đến máy chủ cơ sở dữ liệu ("chuỗi kết nối"). Hãy liên hệ với nhà cung cấp dịch vụ Internet của bạn nếu cần thiết. Nếu bạn đang cài đặt trên máy tính hoặc trên máy chủ, có thể bạn sẽ cần hỏi thông tin từ Quản trị viên Hệ thống của mình.</Value>
